--- a/index.html
+++ b/index.html
@@ -279,9 +279,10 @@ p {
       <h1>Image Slider</h1>
       <div class="slider">
         <div class="slides">
-          <div class="slide"><img src="https://via.placeholder.com/800x400" alt="Slide 1"></div>
-          <div class="slide"><img src="https://via.placeholder.com/800x400" alt="Slide 2"></div>
-          <div class="slide"><img src="https://via.placeholder.com/800x400" alt="Slide 3"></div>
+          <div class="slide"><img src="https://wallpaperset.com/w/full/5/c/7/232750.jpg" alt="Slide 1"></div>
+          <div class="slide"><img src="https://wallpapers.com/images/high/shin-chan-mexican-hat-8g40mvp3fvv0993f.webp" alt="Slide 2"></div>
+          <div class="slide"><img src="https://wallpapers.com/images/high/jinchuriki-naruto-4k-x4hkkoiafno7wh1t.webp" alt="Slide 3"></div>
+          <!-- <div class="slide"><img src="https://via.placeholder.com/800x400" alt="Slide 3"></div> -->
         </div>
         <div class="slider-buttons">
           <button class="slider-button" id="prevBtn">&#10094;</button>
