--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-32">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToonFlix</title>
 </head>
@@ -168,14 +168,14 @@ p {
 
 /* Additional section styling */
 .features {
-  display: flex;
+  display: none;
   justify-content: space-around;
   align-items: center;
-  padding: 20px;
+  padding: 0px;
 }
 
 .feature-item {
-  max-width: 300px;
+  max-width: 50%;
   text-align: center;
   padding: 20px;
 }
@@ -189,7 +189,7 @@ p {
 }
 
 .logos img {
-  max-width: 100px;
+  max-width: 200px;
   margin: 20px;
 }
 
@@ -232,13 +232,37 @@ p {
   padding: 10px;
   cursor: pointer;
 }
+
+/* For animating the hand */
+.waving:before {
+content: attr(data-hover);
+}
+
+.waving:hover {
+animation-name: wave-animation;
+animation-duration: 3.0s;
+animation-iteration-count: infinite;
+transform-origin: 70% 70%;
+}
+
+@keyframes wave-animation {
+0% {
+transform: rotate( 0.0deg)
+}
+50% {
+transform: rotate(30.0deg)
+}
+100% {
+transform: rotate( 0.0deg)
+}
+}
 </style>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="navbar" id="navbar">
       <div class="logo">
-        <a href="#" style="font-size: 20px;">Landing Stars</a>
+        <a href="#" style="font-size: 20px;">ToonFlix</a>
       </div>
       <div class="nav-links">
         <a href="#">Home</a>
@@ -248,7 +272,7 @@ p {
       </div>
     </div>
     <div class="container">
-      <h1>Welcome to Landing Stars</h1>
+      <h1><div class="waving" data-hover="👋"></div> 😊Welcome to ToonFlix</h1>
       <p>Explore the beauty of dynamic backgrounds.</p>
       <a href="#features" class="cta-button">Learn More</a>
     </div>
@@ -256,27 +280,27 @@ p {
       <h1>Features</h1>
       <div class="features">
         <div class="feature-item">
-          <h2>Feature 1</h2>
-          <p>Detail about Feature 1.</p>
+          <h2>Doraemon</h2>
+          <p>Watch</p>
         </div>
         <div class="feature-item">
-          <h2>Feature 2</h2>
-          <p>Detail about Feature 2.</p>
+          <h2>ShinChan</h2>
+          <p>watch</p>
         </div>
         <div class="feature-item">
-          <h2>Feature 3</h2>
-          <p>Detail about Feature 3.</p>
+          <h2>Naruto</h2>
+          <p>watch</p>
         </div>
       </div>
       <div class="logos">
-        <img src="https://via.placeholder.com/100" alt="Logo 1">
-        <img src="https://via.placeholder.com/100" alt="Logo 2">
-        <img src="https://via.placeholder.com/100" alt="Logo 3">
-        <img src="https://via.placeholder.com/100" alt="Logo 4">
+        <img src="https://rukminim2.flixcart.com/image/850/1000/xif0q/magnet/e/4/m/10-shinchan-wooden-fridge-magnet-fun-comic-character-gift-and-original-imagyyaswzffp7f6.jpeg?q=90&crop=false" alt="Logo 1">
+        <img src="https://i.pinimg.com/originals/58/76/8a/58768acee8ebc386b0c4c66ca502658f.jpg" alt="Logo 2">
+        <img src="https://wallpapers.com/images/hd/naruto-profile-pictures-sa1tekghfajrr928.jpg" alt="Logo 3">
+        <!-- <img src="https://via.placeholder.com/100" alt="Logo 4"> -->
       </div>
     </div>
     <div class="container">
-      <h1>Image Slider</h1>
+      <h1>Let's Goo..</h1>
       <div class="slider">
         <div class="slides">
           <div class="slide"><img src="https://wallpaperset.com/w/full/5/c/7/232750.jpg" alt="Slide 1"></div>
