--- a/Shinchan/season15.html
+++ b/Shinchan/season15.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToonFlix</title>
 </head>
-<link rel="stylesheet" href="/commontheme/ctheme.css">
-<link rel="stylesheet" href="/commontheme/button.css">
+<link rel="stylesheet" href="../commontheme/ctheme.css">
+<link rel="stylesheet" href="../commontheme/button.css">
 <style>
     /* For animating the hand */
     .waving:before {
