--- a/Shinchan/season15.html
+++ b/Shinchan/season15.html
@@ -159,7 +159,7 @@
     <div class="star-background"></div>
 </body>
 
-<script src="/commontheme/ctheme.js"></script>
+<script src="../commontheme/ctheme.js"></script>
 <script src="season15.js"></script>
 
 </html>
