--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-32">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToonFlix</title>
+    <script src="../commontheme/gtag.js"></script>
 </head>
 <link rel="stylesheet" href="theme.css">
 <style>
