--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta charset="utf-32">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToonFlix</title>
-    <script src="../commontheme/gtag.js"></script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EEN0FJVVXS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EEN0FJVVXS');
+</script>
 </head>
 <link rel="stylesheet" href="theme.css">
 <style>
