--- a/Shinchan/season15.html
+++ b/Shinchan/season15.html
@@ -47,7 +47,7 @@
 <body>
     <div class="navbar" id="navbar">
         <div class="logo">
-            <a href="/index.html" style="font-size: 20px;">ToonFlix</a>
+            <a href="../index.html" style="font-size: 20px;">ToonFlix</a>
         </div>
         <div class="nav-links">
             <a href="#">Home</a>
