--- a/Shinchan/season15.html
+++ b/Shinchan/season15.html
@@ -51,7 +51,7 @@
         </div>
         <div class="nav-links">
             <a href="#">Home</a>
-            <a href="/about.html">About</a>
+            <a href="../about.html">About</a>
             <a href="#">Services</a>
             <a href="#">Contact</a>
         </div>
