--- a/Doraemon/season17.html
+++ b/Doraemon/season17.html
@@ -96,6 +96,31 @@
             <button id="btn23" class="cta-button1">Episode - 23</button>
             <button id="btn24" class="cta-button1">Episode - 24</button>
             <button id="btn25" class="cta-button1">Episode - 25</button>
+            <button id="btn26" class="cta-button1">Episode - 26</button>
+            <button id="btn27" class="cta-button1">Episode - 27</button>
+            <button id="btn28" class="cta-button1">Episode - 28</button>
+            <button id="btn29" class="cta-button1">Episode - 29</button>
+            <button id="btn30" class="cta-button1">Episode - 30</button>
+            <button id="btn31" class="cta-button1">Episode - 31</button>
+            <button id="btn32" class="cta-button1">Episode - 32</button>
+            <button id="btn33" class="cta-button1">Episode - 33</button>
+            <button id="btn34" class="cta-button1">Episode - 34</button>
+            <button id="btn35" class="cta-button1">Episode - 35</button>
+            <button id="btn36" class="cta-button1">Episode - 36</button>
+            <button id="btn37" class="cta-button1">Episode - 37</button>
+            <button id="btn38" class="cta-button1">Episode - 38</button>
+            <button id="btn39" class="cta-button1">Episode - 39</button>
+            <button id="btn40" class="cta-button1">Episode - 40</button>
+            <button id="btn41" class="cta-button1">Episode - 41</button>
+            <button id="btn42" class="cta-button1">Episode - 42</button>
+            <button id="btn43" class="cta-button1">Episode - 43</button>
+            <button id="btn44" class="cta-button1">Episode - 44</button>
+            <button id="btn45" class="cta-button1">Episode - 45</button>
+            <button id="btn46" class="cta-button1">Episode - 46</button>
+            <button id="btn47" class="cta-button1">Episode - 47</button>
+            <button id="btn48" class="cta-button1">Episode - 48</button>
+            <button id="btn49" class="cta-button1">Episode - 49</button>
+            <button id="btn50" class="cta-button1">Episode - 50</button>
 
             <iframe id="frame" src="https://via.placeholder.com/370x150" width="100%" height="300px" frameborder="0"
                 allowfullscreen style="text-align: center;"></iframe>
@@ -124,13 +149,13 @@
 
 
         <div class="logos">
-            <a href="shinchan.html"><img
+            <a href="../shinchan.html"><img
                     src="https://rukminim2.flixcart.com/image/850/1000/xif0q/magnet/e/4/m/10-shinchan-wooden-fridge-magnet-fun-comic-character-gift-and-original-imagyyaswzffp7f6.jpeg?q=90&crop=false"
                     alt="Logo 1"> </a>
-            <a href="doraemon.html">
+            <a href="../doraemon.html">
                 <img src="https://i.pinimg.com/originals/58/76/8a/58768acee8ebc386b0c4c66ca502658f.jpg"
                     alt="Logo 2"></a>
-            <a href="naruto.html">
+            <a href="../naruto.html">
                 <img src="https://wallpapers.com/images/hd/naruto-profile-pictures-sa1tekghfajrr928.jpg"
                     alt="Logo 3"></a>
             <!-- <img src="https://via.placeholder.com/100" alt="Logo 4"> -->
@@ -160,6 +185,6 @@
 </body>
 
 <script src="../commontheme/ctheme.js"></script>
-<script src="season15.js"></script>
+<script src="season17.js"></script>
 
 </html>
