--- a/doraemon.html
+++ b/doraemon.html
@@ -66,7 +66,7 @@
 
 
         <!-- <a href="Shinchan/season15.html" class="cta-button">SEASON - 15</a> -->
-        <a href="Shinchan/season15.html" class="cta-button">SEASON - 17</a>
+        <a href="Doraemon/season17.html" class="cta-button">SEASON - 17</a>
         <p>More are Coming SOON...</p>
     </div>
 
