--- a/doraemon.html
+++ b/doraemon.html
@@ -97,13 +97,13 @@
         <!-- Ends -->
 
         <div class="logos">
-            <a href="shinchan.html"><img
+            <a href="../shinchan.html"><img
                     src="https://rukminim2.flixcart.com/image/850/1000/xif0q/magnet/e/4/m/10-shinchan-wooden-fridge-magnet-fun-comic-character-gift-and-original-imagyyaswzffp7f6.jpeg?q=90&crop=false"
                     alt="Logo 1"> </a>
-            <a href="doraemon.html">
+            <a href="../doraemon.html">
                 <img src="https://i.pinimg.com/originals/58/76/8a/58768acee8ebc386b0c4c66ca502658f.jpg"
                     alt="Logo 2"></a>
-            <a href="naruto.html">
+            <a href="../naruto.html">
                 <img src="https://wallpapers.com/images/hd/naruto-profile-pictures-sa1tekghfajrr928.jpg"
                     alt="Logo 3"></a>
             <!-- <img src="https://via.placeholder.com/100" alt="Logo 4"> -->
