--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div id="popupContainer">
             <button onclick="openPop()">
 
-                <a href="#features" class="cta-button">Watch Now</a>
+                <a  class="cta-button">Watch Now</a>
 
             </button>
             <div id="popupDialog">
