--- a/shinchan.html
+++ b/shinchan.html
@@ -92,11 +92,16 @@
         <!-- Ends -->
 
         <div class="logos">
-            <img src="https://rukminim2.flixcart.com/image/850/1000/xif0q/magnet/e/4/m/10-shinchan-wooden-fridge-magnet-fun-comic-character-gift-and-original-imagyyaswzffp7f6.jpeg?q=90&crop=false"
-                alt="Logo 1">
-            <img src="https://i.pinimg.com/originals/58/76/8a/58768acee8ebc386b0c4c66ca502658f.jpg" alt="Logo 2">
-            <img src="https://wallpapers.com/images/hd/naruto-profile-pictures-sa1tekghfajrr928.jpg" alt="Logo 3">
-            <!-- <img src="https://via.placeholder.com/100" alt="Logo 4"> -->
+            <a href="shinchan.html"><img
+                    src="https://rukminim2.flixcart.com/image/850/1000/xif0q/magnet/e/4/m/10-shinchan-wooden-fridge-magnet-fun-comic-character-gift-and-original-imagyyaswzffp7f6.jpeg?q=90&crop=false"
+                    alt="Logo 1"> </a>
+            <a href="doraemon.html">
+                <img src="https://i.pinimg.com/originals/58/76/8a/58768acee8ebc386b0c4c66ca502658f.jpg"
+                    alt="Logo 2"></a>
+            <a href="naruto.html">
+                <img src="https://wallpapers.com/images/hd/naruto-profile-pictures-sa1tekghfajrr928.jpg"
+                    alt="Logo 3"></a>
+                    <!-- <img src="https://via.placeholder.com/100" alt="Logo 4"> -->
         </div>
     </div>
     <div class="container">
