--- a/naruto.html
+++ b/naruto.html
@@ -63,10 +63,10 @@
             <div class="waving" data-hover="👋">😊</div>Welcome to <d class="i">ToonFlix</d>
         </h1>
         <p>Select the episode you want to watch...</p>
-        <a href="Shinchan/season15.html" class="cta-button">SEASON - 1</a><br>
-        <a href="Shinchan/season15.html" class="cta-button">SEASON - 2</a><br>
-        <a href="Shinchan/season15.html" class="cta-button">SEASON - 3</a><br>
-        <a href="Shinchan/season15.html" class="cta-button">SEASON - 4</a><br>
+        <a href="Naruto/season1.html" class="cta-button">SEASON - 1</a><br>
+        <a href="Naruto/season2.html" class="cta-button">SEASON - 2</a><br>
+        <a href="Naruto/season3.html" class="cta-button">SEASON - 3</a><br>
+        <a href="Naruto/season4.html" class="cta-button">SEASON - 4</a><br>
         <p>More are Coming SOON...</p>
     </div>
     <div class="container">
