--- a/Naruto/season2.html
+++ b/Naruto/season2.html
@@ -51,10 +51,10 @@
             <a href="../index.html" style="font-size: 20px;">ToonFlix</a>
         </div>
         <div class="nav-links">
-            <a href="#">Home</a>
+            <a href="../index.html">Home</a>
             <a href="../about.html">About</a>
             <a href="#">Services</a>
-            <a href="#">Contact</a>
+            <a href="../contact.html">Contact</a>
         </div>
     </div>
 
