--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 
@@ -59,13 +60,17 @@
 
 
     <div class="container">
-        <h1>
-            <div class="waving" data-hover="👋">😊</div>Welcome to <d class="i">ToonFlix</d>
-        </h1>
-        <p>Select the episode you want to watch...</p>
-        <a href="Shinchan/season15.html" class="cta-button">SEASON - 15</a>
-        <p>More are Coming SOON...</p>
-    </div>
+        IF you want to contact us plese go here 👇👇<br><br>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfhBSeosR5cJr8wIi9y45rY-spAGYrpgaA--ZCqpAw3rwA0nw/viewform?usp=sf_link"><h1 style="color: aqua;"><b> Contact </b></h1></a>
+        </div>
+        
+    
+    <!-- <div class="me" style="text-align: center;"> -->
+        <!-- <p style="text-align: center;">Hello there I am Saikat.</p>
+        <p style="text-align: center;">Ex - KVIAN</p>
+        <p style="text-align: center;">I just made this project only for entertainment purpose. Enjoy :-)</p>
+    </div> -->
+
     <div class="container">
         <h1>Features</h1>
         <div class="features">
@@ -83,14 +88,10 @@
             </div>
         </div>
 
-        <!-- for the checking of the eisdose -->
 
-        <!-- <button id="btn1">link1</button>
-        <button id="btn2">link2</button>
-        <button id="btn3">link3</button>
-        <iframe id="frame" src="https://via.placeholder.com/100" width="100%" height="100%" frameborder="0" allowfullscreen></iframe> -->
-
-        <!-- Ends -->
+        <!-- <iframe width="100%" height="100%" frameborder="0"
+        src="https://1024terabox.com/sharing/embed?surl=Sm0O_0HmlHWUDiZ7bbWfmw&resolution=720&autoplay=true&mute=false&uk=4401128819417&fid=675856027268805&slid="
+        allowfullscreen></iframe> -->
 
         <div class="logos">
             <a href="shinchan.html"><img
@@ -129,7 +130,6 @@
 </body>
 
 <script src="theme.js"></script>
-<script src="shinchan.js"></script>
 <script>
 
 </script>
