--- a/naruto.html
+++ b/naruto.html
@@ -50,10 +50,10 @@
             <a href="index.html" style="font-size: 20px; font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">ToonFlix</a>
         </div>
         <div class="nav-links">
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="#">Services</a>
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
         </div>
     </div>
 
