--- a/Naruto/season3.html
+++ b/Naruto/season3.html
@@ -5,7 +5,7 @@
     <meta charset="utf-32">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToonFlix</title>
-    <script src="commontheme/gtag.js"></script>
+    <script src="../commontheme/gtag.js"></script>
 </head>
 <link rel="stylesheet" href="../commontheme/ctheme.css">
 <link rel="stylesheet" href="../commontheme/button.css">
