--- a/Naruto/season3.html
+++ b/Naruto/season3.html
@@ -126,7 +126,7 @@
             <a href="../naruto.html">
                 <img src="https://wallpapers.com/images/hd/naruto-profile-pictures-sa1tekghfajrr928.jpg"
                     alt="Logo 3"></a>
-            <!-- <img src="https://via.placeholder.com/100" alt="Logo 4"> -->
+            <!-- <img src="https://via.placeholder.com/100," alt="Logo 4"> -->
         </div>
     </div>
     <div class="container">
